<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">OCR</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    
    <string name="TAKE_A_PHOTO">Take a photo</string>
    <string name="UPLOAD_FROM_GALLERY">Upload from gallery</string>
    <string name="share">share</string>
    <string name="copy">copy</string>
    <string name="save">save</string>
    <string name="saved_list">saved texts</string>
	
    <string name="copy_message">%1$s</string>
    <string name="delete">delete</string>
</resources>