<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/screen_background_style"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="3" >

    <RelativeLayout
        style="@style/match_wrap"
        android:layout_gravity="center_vertical"
        android:layout_marginBottom="@dimen/padding_10"
        android:layout_weight="2"
        android:gravity="center_vertical" >

        <TextView
            android:id="@+id/capture_text"
            style="@style/textstyle"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="@dimen/padding_30"
            android:drawablePadding="@dimen/padding_10"
            android:drawableTop="@drawable/camera"
            android:gravity="center"
            android:text="@string/TAKE_A_PHOTO" />

        <ImageView
            android:id="@+id/seperator"
            style="@style/both_wrap"
            android:layout_below="@+id/capture_text"
            android:contentDescription="@string/app_name"
            android:src="@drawable/seperator" />

        <TextView
            android:id="@+id/upload_text"
            style="@style/textstyle"
            android:layout_below="@+id/seperator"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/padding_30"
            android:drawablePadding="@dimen/padding_10"
            android:drawableBottom="@drawable/gallery"
            android:gravity="center"
            android:text="@string/UPLOAD_FROM_GALLERY" />
    </RelativeLayout>

    <Button
        android:id="@+id/saved"
        style="@style/buttonstyle"
        android:layout_marginBottom="@dimen/padding_10"
        android:layout_weight="0.3"
        android:gravity="center"
        android:text="@string/saved_list"
        android:visibility="gone"
         />

</LinearLayout>