<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    style="@style/match_wrap"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/padding_15"
    android:paddingLeft="@dimen/padding_5"
    android:paddingRight="@dimen/padding_5"
    android:paddingTop="@dimen/padding_15" >

    <LinearLayout
        style="@style/match_wrap"
        android:orientation="horizontal" >

        <com.ocr.utils.CustomButtonView
            android:id="@+id/share"
            style="@style/buttonstyle"
            android:layout_weight="0.5"
            android:text="@string/share" />

        <com.ocr.utils.CustomButtonView
            android:id="@+id/copy"
            style="@style/buttonstyle"
            android:layout_marginLeft="@dimen/padding_10"
            android:layout_weight="0.5"
            android:text="@string/copy" />
    </LinearLayout>

    <com.ocr.utils.CustomButtonView
        android:layout_gravity="center"
        android:gravity="center"
        android:id="@+id/save"
        style="@style/buttonstyle"
        android:layout_marginTop="@dimen/padding_15"
        android:text="@string/save" />

</LinearLayout>